--- a/src/css/fonts.css
+++ b/src/css/fonts.css
@@ -1,4 +1,14 @@
 /**
  * NOTE: consider the following <link rel="preload" href="[url_to_font]"> to prefetch initially displayed fonts
  */
-@import url('https://fonts.googleapis.com/css2?family=Wendy+One&display=swap');
+ @font-face {
+  font-family: 'Jost';
+  font-style: normal;
+  font-weight: 400;
+  src: url('/assets/delica/jost-v4-latin-regular.eot'); /* IE9 Compat Modes */
+  src: local(''), url('/assets/delica/jost-v4-latin-regular.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
+  url('/assets/fonts/delica/jost-v4-latin-regular.woff2') format('woff2'), /* Super Modern Browsers */
+  url('/assets/fonts/delica/jost-v4-latin-regular.woff') format('woff'), /* Modern Browsers */
+  url('/assets/fonts/delica/jost-v4-latin-regular.ttf') format('truetype'), /* Safari, Android, iOS */
+  url('/assets/fonts/delica/jost-v4-latin-regular.svg#Jost') format('svg'); /* Legacy iOS */
+}
