Header and Navigation not pixel accurate

--- a/src/es/components/pages/Home.html
+++ b/src/es/components/pages/Home.html
@@ -17,14 +17,20 @@
 
 <body>
   <p-general>
-    <o-header mobile-breakpoint="100vw" no-scroll="nav-open" menu-icon="true" namespace="header-">
+    <mindustry-o-header mobile-breakpoint="100vw" no-scroll="nav-open" menu-icon="true" namespace="header-">
+      
+      <ul class="short-nav">
+        <li><a href="#">Jobs</a></li>
+        <li><a href="#">Medien</a></li>
+      </ul>
       <ul class="language-switcher">
-        <li><a href="http://umb.mindustry.local/">EN</a></li>
+        <li><a href="/de">DE</a></li>
+        <li><a href="/en">EN</a></li>
+        <li><a href="/fr">FR</a></li>
       </ul>
       <a-logo
-        src="/media/y0efb1so/logo_mi_rgb.png?anchor=center&mode=crop&height=100&format=png&quality=80&rnd=132675508422070000"
-        href="/" namespace="header-logo-"></a-logo>
-      <mindustry-o-navigation hover="false" namespace="navigation-" mobile-breakpoint="0vw" no-scroll="nav-open">
+        src="../../../img/Logo_Industry.png" href="/" namespace="header-logo-" width="130" height="65"></a-logo>
+      <mindustry-m-navigation hover="false" namespace="navigation-" mobile-breakpoint="0vw" no-scroll="nav-open">
         <ul>
           <li><a href="#" target="">Kategorien</a>
             <ul>
@@ -33,15 +39,13 @@
               <li><a href="/kategorien/ubersicht/brot-back-und-teigwaren/" target="">Brot, Back- und Teigwaren</a></li>
               <li><a href="/kategorien/ubersicht/eiscreme/" target="">Eiscreme</a></li>
               <li><a href="/kategorien/ubersicht/fleisch-geflugel-fisch/" target="">Fleisch, Geflügel, Fisch</a></li>
-              <li><a href="/kategorien/ubersicht/food-convenience-fruchte/" target="">Food & Convenience, Früchte</a>
-              </li>
+              <li><a href="/kategorien/ubersicht/food-convenience-fruchte/" target="">Food & Convenience, Früchte</a></li>
               <li><a href="/kategorien/ubersicht/getranke/" target="">Getränke</a></li>
               <li><a href="/kategorien/ubersicht/joghurt-und-saucen/" target="">Joghurt und Saucen</a></li>
               <li><a href="/kategorien/ubersicht/kaffee/" target="">Kaffee</a></li>
               <li><a href="/kategorien/ubersicht/kase-und-milch/" target="">Käse und Milch</a></li>
               <li><a href="/kategorien/ubersicht/kaugummi/" target="">Kaugummi</a></li>
-              <li><a href="/kategorien/ubersicht/milch-und-fleischersatzprodukte/" target="">Milch- und
-                  Fleischersatzprodukte</a></li>
+              <li><a href="/kategorien/ubersicht/milch-und-fleischersatzprodukte/" target="">Milch- und Fleischersatzprodukte</a></li>
               <li><a href="/kategorien/ubersicht/reis/" target="">Reis</a></li>
               <li><a href="/kategorien/ubersicht/schokolade/" target="">Schokolade</a></li>
               <li><a href="/kategorien/ubersicht/home-care/" target="">Home Care</a></li>
@@ -53,8 +57,7 @@
               <li><a href="/uber-uns/ubersicht/" target="">Übersicht</a></li>
               <li><a href="/uber-uns/ubersicht/mission/" target="">Mission</a></li>
               <li><a href="/uber-uns/ubersicht/geschichte/" target="">Geschichte</a></li>
-              <li><a href="/uber-uns/ubersicht/internationale-ausrichtung/" target="">Internationale Ausrichtung</a>
-              </li>
+              <li><a href="/uber-uns/ubersicht/internationale-ausrichtung/" target="">Internationale Ausrichtung</a></li>
               <li><a href="/uber-uns/ubersicht/zahlen-und-fakten/" target="">Zahlen und Fakten</a></li>
               <li><a href="/uber-uns/ubersicht/services/" target="">Services</a></li>
               <li><a href="/uber-uns/ubersicht/nachhaltigkeit/" target="">Nachhaltigkeit</a></li>
@@ -71,8 +74,8 @@
           </li>
           <li>searchbox</li>
         </ul>
-      </mindustry-o-navigation>
-    </o-header>
+      </mindustry-m-navigation>
+    </mindustry-o-header>
     <o-body>
       <h1>Willkommen bei der Migros Industrie</h1>
       <h1>DIE MIGROS INDUSTRIE IM ÜBERBLICK</h1>
